added first draft for react and websocket integration

--- a/borsachart/borsachart/settings/secrets.json.example
+++ b/borsachart/borsachart/settings/secrets.json.example
@@ -1,6 +1,10 @@
 {
     "local": {
         "SECRET_KEY": "the-local-django-secret-key",
+        "DB_USER": "Postgres username",
+        "DB_PASSWORD": "Postgres user password",
+        "REDIS_HOST": "redis host",
+        "REDIS_PORT": "redis port"
     },
     "production": {
         "SECRET_KEY": "the-production-django-secret-key",
@@ -8,5 +12,9 @@
         "EMAIL_PASS": "yandex-email-password",
         "ADMIN_USER": "admin user",
         "ADMIN_EMAIL": "admin email",
+        "DB_USER": "Postgres username",
+        "DB_PASSWORD": "Postgres user password",
+        "REDIS_HOST": "redis host",
+        "REDIS_PORT": "redis port"
     }
 }
