added celery ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,9 @@ target/
 
 # celery beat schedule file
 celerybeat-schedule
+celerybeat-schedule.bak
+celerybeat-schedule.dat
+celerybeat-schedule.dir
 
 # SageMath parsed files
 *.sage.py
