--- a/borsachart/frontend/package.json
+++ b/borsachart/frontend/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
+    "highcharts": "^5.0.12",
+    "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-highcharts": "^12.0.0",
     "react-router-dom": "^4.1.1",
     "reconnecting-websocket": "^3.0.5"
   },
