--- a/borsachart/frontend/package.json
+++ b/borsachart/frontend/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^15.5.4",
     "react-highcharts": "^12.0.0",
     "react-router-dom": "^4.1.1",
-    "reconnecting-websocket": "^3.0.5"
+    "reconnecting-websocket": "^3.0.5",
+    "universal-cookie": "^2.0.8"
   },
   "devDependencies": {
     "react-scripts": "1.0.7",
