added REDIS PORT description for testing purposes

--- a/borsachart/borsachart/settings/secrets.json.example
+++ b/borsachart/borsachart/settings/secrets.json.example
@@ -4,7 +4,8 @@
         "DB_USER": "Postgres username",
         "DB_PASSWORD": "Postgres user password",
         "REDIS_HOST": "redis host",
-        "REDIS_PORT": "redis port"
+        "REDIS_PORT": "redis port",
+        "REDIS_TEST_PORT": "redis port for testing"
     },
     "production": {
         "SECRET_KEY": "the-production-django-secret-key",
